# slice-for-rezonant

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_group_tables.py
app/: config.py  database.py  main.py
app/models/: __init__.py  group.py
app/routers/: groups.py
app/schemas/: group.py
app/services/: group_service.py
slice_mobile_groups.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_groups.py
